# vk_sdl2_vp

./: .gitignore  CMakeLists.txt  README.md
shaders/: frag_spv.h  shader.frag  shader.vert  vert_spv.h
src/: FFmpegDecoder.cpp  FFmpegDecoder.h  SDLAudioPlayer.cpp  SDLAudioPlayer.h  ThreadSafeQueue.h  Utils.cpp  Utils.h  VulkanSDL2App.cpp  VulkanSDL2App.h  main.cpp
